fix: buttons on mobiles

--- a/src/common/components/search-field/SearchField.css
+++ b/src/common/components/search-field/SearchField.css
@@ -6,7 +6,6 @@
     position: absolute;
     top: 2vh;
     left: 1vw;
-    width: 16vw;
     display: flex;
     align-items: center;
     background-color: #282c34;
@@ -111,7 +110,6 @@
     position: absolute;
     top: calc(6vh - 2px);
     left: 1vw;
-    width: 16vw;
     z-index: 2;
     display: flex;
     justify-content: center;
